# spotify-dj

./: Cargo.toml  README.md
src/: auth.rs  client.rs  main.rs  output.rs
src/commands/: mod.rs  playback.rs  queue.rs  search.rs
