[package]
name = "spotify-dj"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spotify-dj"
path = "src/main.rs"

[dependencies]
rspotify = { version = "0.13", features = ["cli"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
open = "5"
reqwest = { version = "0.12", features = ["json"] }
